version 0.9.6 -- unreleased
    backupninja changes
	 . fix bug in cstream definition, thanks Jamie McClelland
	 . Allow the entire backup run to be halted by an action, thanks to
	   Matthew Palmer (Closes: #455836)
	 . Fixed tr construct reporting a warning (Closes: #452669)
    lib changes
	vserver:
	 . added vservers_running function
    handler changes
	dup:
	 . General cleanup
	 . Better support for new duplicity (>= 0.4.4) command line syntax:
	   run remove-older-than when $keep is not set to yes (Closes: #458816),
	   and run "duplicity cleanup" before any other duplicity command; both
	   only trigger a warning on failure, since they should not stop backups
	   from being done. Also migrated full/incremental backup switch to the
	   new syntax.
	 . Support every duplicity-supported transport with new configuration
	   option desturl (Closes: #483712, #346040, Trac#2).
	 .
	Actually allow to backup only VServers, by relaxing $include test.
	ldap:
	 . support HDB backend just as the BDB one, and make message clearer
	   when no supported backend is found (Closes: #476910)
	rdiff:
	 . Fixed ignore_version default value missing
	 . Add patch from Matthew Palmer to rdiff handler to incorporate sshoptions
	   into options via remote-schema not already specified (Closes: #424639)
	wget:
	 . New handler from rhatto designed to incrementally pull content from
	   a website to a local folder, based on the rsync handler
	maildir:
	 . fixed bug where maildirs that start with a number were skipped.
	 . make deleted maildirs record the date they were deleted
	 . add destid_file configuration option to enable you to specify an alternate
	   ssh public key authentication file (defaulting to /root/.ssh/id_rsa)
	pgsql, mysql, svn, sys:
	 . use new vservers_running function from lib/vserver (factorization++)
	sys:
	 . update for 2.6 kernels: use /proc/kallsyms instead of /proc/ksyms
	   (Closes: Trac#39)
	 . support selection of VServers to run on, in the same way as in the